finding rectangular subject, filter it to have 4 points, multiplying by projection matrix to strech and cover screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity
             android:name=".CameraCapture"
             android:screenOrientation="landscape"
+            android:configChanges="orientation|keyboardHidden"
             android:exported="true" />
         <activity
             android:name=".SecondActivity"
