--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,12 +19,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
             android:name=".CameraCapture"
-            android:screenOrientation="landscape"
-            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="unspecified"
+            android:configChanges="keyboardHidden"
             android:exported="true" />
         <activity
             android:name=".SecondActivity"
